--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formspree/react": "^2.2.5",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
