--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-markdown": "^8.0.3",
+    "react-syntax-highlighter": "^15.5.0",
     "sass": "^1.52.1"
   },
   "devDependencies": {
