--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
       - run: npm install -g yarn
-      - run: yarn ci
+      - run: yarn install --frozen-lockfile
       - run: yarn build
       - run: yarn export
 
