Deploy script update nojekyll

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,6 +28,7 @@ jobs:
       - run: npm install -g yarn
       - run: yarn install --frozen-lockfile
       - run: yarn build && export
+      - run: touch /out/.nojekyll
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4.3.3
