--- a/data/projects.json
+++ b/data/projects.json
@@ -13,10 +13,10 @@
     "_id": "2",
     "title": "eCommerce website - MERN Fullstack",
     "subtitle": "React, Redux, Mongo, Node, Express",
-    "description": "Build with React and Redux for it's state management. This is a fully functional e-commerce website including: product listing, pagination, product detail page, search, user authentication, user profile page, rating, review, payment (paypal integration). Admin user and admin area with CRUD functionality for users, products, orders.",
+    "description": "Build with React and Redux for it's state management. This is a fully functional e-commerce website including: product listing, pagination, product detail page, search, user authentication, user profile page, rating, review and payment (paypal integration). Admin user and admin area with CRUD functionality for users, products and orders.",
     "liveLink": "https://mernshop-99.herokuapp.com/",
     "githubLink": "https://github.com/renebitter/mernshop",
-    "image": "mernshop.png",
+    "image": "mernshop-2.png",
     "isFeatured": true
   },
 
