--- a/data/projects.json
+++ b/data/projects.json
@@ -3,7 +3,7 @@
     "_id": "1",
     "title": "eCommerce website - MERN Fullstack",
     "subtitle": "React, Redux, Mongo, Node, Express",
-    "description": "Build with React and Redux for it's state management. This is a fully functional e-commerce website including: product listing, pagination, product detail page, search, user authentication, user profile page, rating, review and payment (paypal integration). Admin user and admin area with CRUD functionality for users, products and orders.",
+    "description": "Developed with the MERN stack + Redux for the state management, this is a fully functional e-commerce website including pages from product listing to payment and admin area with CRUD functionality for users, products and orders. Authentication handled with JWT.",
     "liveLink": "https://mernshop-99.herokuapp.com/",
     "githubLink": "https://github.com/renebitter/mernshop",
     "image": "mernshop.webp",
@@ -13,7 +13,7 @@
     "_id": "2",
     "title": "Portfolio-Blog website",
     "subtitle": "React, Next.js, Markdown",
-    "description": "Static website using Next.js (the one you're on). I tried to keep it at a minimum regarding dependencies. Used some for animation and markdown. ",
+    "description": "Developed with Next.js using Static Site Generation. Dynamic pages for projects and blog posts. Blog posts written in markdown and rendered with react-markdown.",
     "liveLink": "https://nextjs-blog-renebitter.vercel.app/",
     "githubLink": "https://github.com/renebitter/nextjs-blog",
     "image": "portfolio.webp",
@@ -22,7 +22,7 @@
   {
     "_id": "3",
     "title": "eCommerce website - Next.js and Typescript",
-    "subtitle": "React, Typescript, Next.js, Redux, Mongo, Node, Express, Contentful ",
+    "subtitle": "React, Typescript, Next.js, Mongo, Node, Express, Contentful ",
     "description": "Current project under development.",
     "image": "project01.jpg",
     "isFeatured": true
