--- a/data/projects.json
+++ b/data/projects.json
@@ -32,7 +32,7 @@
     "_id": "9",
     "title": "Shopware",
     "subtitle": "Shopware 5 & 6, Bootstrap 3 & 4, Twig, Smarty",
-    "description": "Worked on the development of Shopware 6 itself and many other Shopware 5 and 6 projects for mid and large size B2B and B2C clients in Germany.",
+    "description": "Worked on the development of Shopware 6 and many other Shopware 5 and 6 projects for mid and large size B2B and B2C clients in Germany.",
     "githubLink": "https://github.com/shopware/platform",
     "image": "shopware.png",
     "isFeatured": true
