--- a/data/projects.json
+++ b/data/projects.json
@@ -10,43 +10,93 @@
     "isFeatured": true,
     "screenshots": [
       {
-        "screenshot": "home01.png",
-        "description": "Home page with navbar and hero element."
+        "screenshot": "01-home.png",
+        "description": "Homepage with navbar and hero element."
       },
       {
-        "screenshot": "home02.png",
-        "description": "Carousel with 3 top-rated products and general product listing."
+        "screenshot": "02-home.png",
+        "description": "Homepage. Carousel with 3 top-rated products and general product listing."
       },
       {
-        "screenshot": "user_profile.png",
-        "description": "User profile page. Change user information and password and list user orders."
-      },
-
-      {
-        "screenshot": "users_admin.png",
-        "description": "Admin view of registered users."
+        "screenshot": "03-home.png",
+        "description": "Homepage. Product listing and pagination."
       },
       {
-        "screenshot": "user_edit_admin.png",
-        "description": "Admin user edit page."
+        "screenshot": "04-product-detail-page.png",
+        "description": "Product detail page. Product description, review rating, price, stock status, quantity selector, add to cart button and review section."
       },
+      { "screenshot": "06-cart-empty.png", "description": "Empty cart." },
       {
-        "screenshot": "products_admin.png",
-        "description": "Admin list of registered products"
-      },
-      {
-        "screenshot": "product_edit_admin.png",
-        "description": "Admin update/create products page."
-      },
-      {
-        "screenshot": "orders_admin.png",
-        "description": "Admin list of global orders."
-      },
-
-      { "screenshot": "cart01.png", "description": "Empty cart." },
-      {
-        "screenshot": "cart02.png",
+        "screenshot": "05-cart-full.png",
         "description": "Multiple products added to cart. Quantity selection and price updates."
+      },
+      {
+        "screenshot": "07-shipping.png",
+        "description": "Shipping address."
+      },
+      {
+        "screenshot": "08-payment.png",
+        "description": "Payment method selection."
+      },
+      {
+        "screenshot": "09-order-summary.png",
+        "description": "Order summary including shipping address, payment method, order items, prices and total price."
+      },
+      {
+        "screenshot": "10-order-payment.png",
+        "description": "Order payment."
+      },
+      {
+        "screenshot": "11-order-paypal.png",
+        "description": "Paypal integration."
+      },
+      {
+        "screenshot": "12-order-paid.png",
+        "description": "Order summary - paid."
+      },
+      {
+        "screenshot": "14-sign-in.png",
+        "description": "Sign in."
+      },
+      {
+        "screenshot": "15-register.png",
+        "description": "Sign up."
+      },
+      {
+        "screenshot": "16-admin-user-list.png",
+        "description": "Admin user list."
+      },
+      {
+        "screenshot": "17-admin-user-edit.png",
+        "description": "Admin user edit."
+      },
+      {
+        "screenshot": "18-admin-product-list.png",
+        "description": "Admin product list."
+      },
+      {
+        "screenshot": "19-admin-product-edit.png",
+        "description": "Admin product edit/create."
+      },
+      {
+        "screenshot": "20-admin-order-list.png",
+        "description": "Admin order list."
+      },
+      {
+        "screenshot": "21-admin-order-edit.png",
+        "description": "Admin order edit. Mark as delivered."
+      },
+      {
+        "screenshot": "22-admin-order-edit-2.png",
+        "description": "Admin order delivered."
+      },
+      {
+        "screenshot": "23-user-profile-orders.png",
+        "description": "User profile orders."
+      },
+      {
+        "screenshot": "24-user-profile-order-delivered.png",
+        "description": "User profile order delivered."
       }
     ]
   },
