--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@formspree/react": "^2.2.5",
+    "aos": "^3.0.0-beta.6",
     "gray-matter": "^4.0.3",
     "next": "12.1.6",
     "react": "18.1.0",
