--- a/data/projects.json
+++ b/data/projects.json
@@ -2,7 +2,7 @@
   {
     "_id": "1",
     "title": "eCommerce website - MERN Fullstack",
-    "subtitle": "React, Redux, Mongo, Node, Express, Bootstrap",
+    "subtitle": ["React", "Redux", "Mongo", "Node", "Express", "Bootstrap"],
     "description": "Fully functional e-commerce website including pages from product listing to payment and admin area with CRUD functionality for users, products and orders. Authentication handled with JWT. Redux for state management.",
     "liveLink": "https://mernshop-99.herokuapp.com/",
     "githubLink": "https://github.com/renebitter/mernshop",
@@ -103,7 +103,7 @@
   {
     "_id": "2",
     "title": "Portfolio-Blog website",
-    "subtitle": "React, Next.js, Markdown, Sass",
+    "subtitle": ["React", "Next.js", "Markdown", "Sass"],
     "description": "Developed with Next.js using Static Site Generation. Dynamic pages for projects and blog posts. Blog posts written in markdown and rendered with react-markdown.",
     "liveLink": "https://nextjs-blog-renebitter.vercel.app/",
     "githubLink": "https://github.com/renebitter/nextjs-blog",
@@ -139,7 +139,7 @@
   {
     "_id": "5",
     "title": "Contact Keeper - MERN Fullstack",
-    "subtitle": "React, Mongo, Node, Express",
+    "subtitle": "React, Mongo, Node, Express, Context",
     "description": "This is a MERN Fullstack project with authentication and CRUD functionality.",
     "liveLink": "https://contactkeeper53773.herokuapp.com/",
     "githubLink": "https://github.com/renebitter/contact_keeper"
