--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@formspree/react": "^2.2.5",
     "aos": "^3.0.0-beta.6",
+    "framer-motion": "^6.4.3",
     "gray-matter": "^4.0.3",
     "next": "12.1.6",
     "react": "18.1.0",
