--- a/data/projects.json
+++ b/data/projects.json
@@ -104,7 +104,7 @@
     "_id": "2",
     "title": "Portfolio-Blog website",
     "subtitle": ["React", "Next.js", "Markdown", "Sass"],
-    "description": "Developed with Next.js using Static Site Generation. Dynamic pages for projects and blog posts. Blog posts written in markdown and rendered with react-markdown.",
+    "description": "Developed with Next.js using Static Site Generation. Dynamic pages for projects and blog posts. Blog posts written in markdown and rendered with react-markdown. Framer motion for the \"eye candy\".",
     "liveLink": "https://nextjs-blog-renebitter.vercel.app/",
     "githubLink": "https://github.com/renebitter/nextjs-blog",
     "image": "portfolio.jpg",
