Refactor subtitle to tech

--- a/data/projects.json
+++ b/data/projects.json
@@ -2,7 +2,7 @@
   {
     "_id": "1",
     "title": "eCommerce website - MERN Fullstack",
-    "subtitle": ["React", "Redux", "Mongo", "Node", "Express", "Bootstrap"],
+    "tech": ["React", "Redux", "MongoDB", "Node", "Express", "Bootstrap"],
     "description": "Fully functional e-commerce website including pages from product listing to payment and admin area with CRUD functionality for users, products and orders. Authentication handled with JWT. Redux for state management.",
     "liveLink": "https://mernshop-99.herokuapp.com/",
     "githubLink": "https://github.com/renebitter/mernshop",
@@ -103,7 +103,7 @@
   {
     "_id": "2",
     "title": "Portfolio-Blog website",
-    "subtitle": ["React", "Next.js", "Markdown", "Sass"],
+    "tech": ["React", "Next.js", "Markdown", "Sass"],
     "description": "Developed with Next.js using Static Site Generation. Dynamic pages for projects and blog posts. Blog posts written in markdown and rendered with react-markdown. Framer motion for the \"eye candy\".",
     "liveLink": "https://nextjs-blog-renebitter.vercel.app/",
     "githubLink": "https://github.com/renebitter/nextjs-blog",
@@ -113,7 +113,15 @@
   {
     "_id": "3",
     "title": "eCommerce website - Next.js and Typescript",
-    "subtitle": "React, Typescript, Next.js, Mongo, Node, Express, Contentful ",
+    "tech": [
+      "React",
+      "Typescript",
+      "Next.js",
+      "MongoDB",
+      "Node",
+      "Express",
+      "Contentful"
+    ],
     "description": "Current project under development.",
     "image": "typescript.webp",
     "isFeatured": false
@@ -122,7 +130,7 @@
   {
     "_id": "9",
     "title": "Shopware",
-    "subtitle": "Shopware, Bootstrap, Twig, Smarty",
+    "tech": ["Shopware", "Bootstrap", "Twig", "Smarty"],
     "description": "Worked on the development of Shopware 6 and many other Shopware 5 and 6 projects for mid and large size B2B and B2C clients in Germany.",
     "githubLink": "https://github.com/shopware/platform",
     "image": "shopware.png",
@@ -131,7 +139,7 @@
   {
     "_id": "4",
     "title": "Next.js authentication using next-auth",
-    "subtitle": "React, Next.js",
+    "tech": ["React", "Next.js"],
     "description": "Project built using next-auth library to handle authentication. SessionProvider, useSession, getSession, CredentialsProvider, JWT & bcryptjs (for password hashing), mongodb, HTTP requests sent using fetch.",
     "liveLink": "https://nextjs-authentication-eight.vercel.app/",
     "githubLink": "https://github.com/renebitter/nextjs-authentication"
@@ -139,7 +147,7 @@
   {
     "_id": "5",
     "title": "Contact Keeper - MERN Fullstack",
-    "subtitle": "React, Mongo, Node, Express, Context",
+    "tech": ["React", "MongoDB", "Node", "Express", "Context"],
     "description": "This is a MERN Fullstack project with authentication and CRUD functionality.",
     "liveLink": "https://contactkeeper53773.herokuapp.com/",
     "githubLink": "https://github.com/renebitter/contact_keeper"
@@ -147,7 +155,7 @@
   {
     "_id": "6",
     "title": "Message Logger App - MERN Fullstack",
-    "subtitle": "React, Redux, Mongo, Node, Express",
+    "tech": ["React", "Redux", "MongoDB", "Node", "Express"],
     "description": "This is a MERN + Redux project with authentication and CRUD functionality. Functionalities: Add/delete logs & users; list logs/users",
     "liveLink": "https://itlogger-04360.herokuapp.com/",
     "githubLink": "https://github.com/renebitter/it-logger-full-stack"
@@ -155,7 +163,7 @@
   {
     "_id": "7",
     "title": "Blog",
-    "subtitle": "React, Next.js, Markdown, Mongodb",
+    "tech": ["React", "Next.js", "Markdown", "MongoDB"],
     "description": "Blog posts written in markdown and rendered with \"react-markdown\". Notifications displayed via react portal through \"_document.js.\". Contact form using mongodb.",
     "liveLink": "https://nextjs-blog-renebitter.vercel.app/",
     "githubLink": "https://github.com/renebitter/nextjs-blog"
@@ -163,7 +171,7 @@
   {
     "_id": "8",
     "title": "Resort website with room listing and filtering",
-    "subtitle": "React, Contentful",
+    "tech": ["React", "Contentful"],
     "description": "Simple resort website with room listing and filter settings. Used react context API for state management and Contentful for content (image, text) delivery.",
     "liveLink": "https://react-resort-project.netlify.app/",
     "githubLink": "https://github.com/renebitter/react_resort"
