--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "18.1.0",
     "react-markdown": "^8.0.3",
     "react-syntax-highlighter": "^15.5.0",
+    "rehype-raw": "^6.1.1",
     "sass": "^1.52.1",
     "swiper": "^8.3.0"
   },
